use getFirst() method in place of get(0) index reference